# y-project

./: .gitignore  Cargo.toml  README.md  architecture.md  task.md  todo.md
docs/phase/: README.md  mvp-domain-architecture.md  mvp-lifecycle.md  phase-1-terminal-graphics-poc.md  phase-2-game-loop-llm.md  phase-3-offscreen-3d.md  phase-4-optimization.md  references.md  svg-scene-contract.md
docs/prd/: prd.md
src/: main.rs
src/app/: app_loop.rs  mod.rs  screen.rs  spa.rs  spa_tests.rs  svg_presenter.rs  text_view.rs  view_model.rs
src/domain/: court.rs  dating.rs  lifecycle.rs  mod.rs  phase.rs  session.rs  session_tests.rs  training.rs
src/render/: demo.rs  mod.rs  raster.rs  scene.rs  svg.rs  svg_tests.rs  tokens.rs
src/shared/: easing.rs  mod.rs  text.rs
src/terminal/: kitty.rs  layout.rs  metrics.rs  mod.rs  session.rs  video.rs
src/terminal/video/: config.rs  events.rs  overlay.rs  overlay_tests.rs  process.rs  render.rs  resize.rs  viewport.rs
src/terminal/video/overlay/: layout.rs
